fix contrast of text vs bg

--- a/advant.css
+++ b/advant.css
@@ -192,7 +192,7 @@ line-height: 2;
   width: auto;
   float: left;
   margin: 5px 0px 5px 0px;
-  background-color: #1aa954;
+  background-color: #296b27;
   padding: 2px 10px 2px 10px;
   /* font-family: arial; */
   font-size: 11px;
@@ -320,8 +320,8 @@ line-height: 2;
   margin: 40px 0px 10px 0px;
   /* font-family: 'SEGOEUIL'; */
   font-size: 50px;
-	color: #4bb568;
-  text-shadow: 4px 4px 4px #97b398;
+	color: #444;
+  text-shadow: 4px 4px 4px #aaa;
   /* color: #aa4499;
   text-shadow: 4px 4px 4px #000; */
   font-weight: 700;
